--- a/OpenWGA/build.gradle
+++ b/OpenWGA/build.gradle
@@ -15,6 +15,9 @@ subprojects {
 
     apply plugin: 'java'
     
+    project.group='de.innovationgate.openwga'
+    project.version='7.2.0.b639'
+    
     sourceCompatibility = 1.7
     
     repositories {
