--- a/OpenWGA/libraries/wga/build.gradle
+++ b/OpenWGA/libraries/wga/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'maven-publish'
 
 compileJava.options.encoding = 'ISO-8859-1'
 
@@ -13,11 +14,11 @@ dependencies {
     compile 'org.apache.lucene:lucene-highlighter:3.5.0'
     compile 'commons-fileupload:commons-fileupload:1.2.1'
     compile 'org.apache.jackrabbit:jackrabbit-webdav:1.6.5'
+    compile 'org.apache.jackrabbit:jackrabbit-jcr-server:1.6.5'
     compile 'javax.json:javax.json-api:1.0'
     compile 'org.glassfish:javax.json:1.0.4'
     compile 'nekohtml:nekohtml:1.9.6.2'
     compile 'org.mockito:mockito-core:1.10.19'
-    compile 'javax.jcr:jcr:2.0'
     
     compileClasspath 'javax.servlet:javax.servlet-api:3.0.1'
     compileClasspath 'javax.websocket:javax.websocket-api:1.1'
@@ -29,6 +30,14 @@ sourceSets {
         resources {
             srcDirs = ["src/main/java"]
             excludes = ["**/*.java"]
+        }
+    }
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
         }
     }
 }
