--- a/OpenWGA/libraries/wgutils/build.gradle
+++ b/OpenWGA/libraries/wgutils/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'maven-publish'
 
 compileJava.options.encoding = 'ISO-8859-1'
 
@@ -40,6 +41,14 @@ sourceSets {
         resources {
             srcDirs = ["src/main/java"]
             excludes = ["**/*.java"]
+        }
+    }
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
         }
     }
 }
