Working OpenWGA CE Distribution

--- a/OpenWGA/.project
+++ b/OpenWGA/.project
@@ -6,6 +6,11 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
+			<name>org.eclipse.jdt.core.javabuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
 			<name>org.eclipse.buildship.core.gradleprojectbuilder</name>
 			<arguments>
 			</arguments>
@@ -13,6 +18,7 @@
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.buildship.core.gradleprojectnature</nature>
+		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
 	<filteredResources>
 		<filter>
@@ -49,6 +55,69 @@
 			<matcher>
 				<id>org.eclipse.ui.ide.multiFilter</id>
 				<arguments>1.0-projectRelativePath-matches-false-false-.gradle</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1460476519325</id>
+			<name></name>
+			<type>26</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-projectRelativePath-matches-false-false-libraries/servicesClient</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1460476519334</id>
+			<name></name>
+			<type>26</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-projectRelativePath-matches-false-false-libraries/tmlScript</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1460476519346</id>
+			<name></name>
+			<type>26</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-projectRelativePath-matches-false-false-libraries/wga</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1460476519356</id>
+			<name></name>
+			<type>26</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-projectRelativePath-matches-false-false-libraries/wgaBuildTools</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1460476519363</id>
+			<name></name>
+			<type>26</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-projectRelativePath-matches-false-false-libraries/wgapi</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1460476519369</id>
+			<name></name>
+			<type>26</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-projectRelativePath-matches-false-false-libraries/wgapiJdbc</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1460476519374</id>
+			<name></name>
+			<type>26</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-projectRelativePath-matches-false-false-libraries/wgutils</arguments>
 			</matcher>
 		</filter>
 	</filteredResources>
