--- a/OpenWGA/libraries/tmlScript/build.gradle
+++ b/OpenWGA/libraries/tmlScript/build.gradle
@@ -1,9 +1,10 @@
 apply plugin: 'java'
+apply plugin: 'maven-publish'
 
 compileJava.options.encoding = 'ISO-8859-1'
 
 dependencies {
-    compile project(":libraries:wga");
+    compile project(":wga");
     compile fileTree(dir: '../../customLibs/rhino', include: ['*.jar'])
     
     compileClasspath 'javax.websocket:javax.websocket-api:1.1'
@@ -15,6 +16,14 @@ sourceSets {
         resources {
             srcDirs = ["src/main/java"]
             excludes = ["**/*.java"]
+        }
+    }
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
         }
     }
 }
