--- a/OpenWGA/libraries/wgaBuildTools/.settings/gradle.prefs
+++ b/OpenWGA/libraries/wgaBuildTools/.settings/gradle.prefs
@@ -1,6 +1,6 @@
 {
   "1.0": {
-    "project_path": ":libraries:wgaBuildTools",
+    "project_path": ":wgaBuildTools",
     "project_dir": "/home/oliver/EclipseWorkspaces/WGA_HEAD.git/OpenWGA/OpenWGA/libraries/wgaBuildTools",
     "connection_project_dir": "/home/oliver/EclipseWorkspaces/WGA_HEAD.git/OpenWGA/OpenWGA",
     "connection_gradle_user_home": null,
