--- a/OpenWGA/libraries/wgaBuildTools/build.gradle
+++ b/OpenWGA/libraries/wgaBuildTools/build.gradle
@@ -6,6 +6,7 @@ compileJava.options.encoding = 'ISO-8859-1'
 dependencies {
     compile project(":wga")
 	compileClasspath 'ant:ant:1.7.0'
+    compileClasspath 'javax.mail:javax.mail-api:1.4.7'
 }
 
 sourceSets {
