--- a/OpenWGA/libraries/wgapi/build.gradle
+++ b/OpenWGA/libraries/wgapi/build.gradle
@@ -10,9 +10,9 @@ dependencies {
     compile 'org.jdom:jdom:1.1.3'
     compile 'eu.medsea.mimeutil:mime-util:1.3'
     compile fileTree(dir: '../../customLibs/informa', include: ['*.jar'])
-    compile 'javax.mail:javax.mail-api:1.4.7'
-    compile 'javax.transaction:transaction-api:1.1'
     
+    compileClasspath 'javax.mail:javax.mail-api:1.4.7'
+    compileClasspath 'javax.transaction:transaction-api:1.1'
     compileClasspath 'javax.servlet:javax.servlet-api:3.0.1'
 
 }
