--- a/OpenWGA/.settings/org.eclipse.buildship.core.prefs
+++ b/OpenWGA/.settings/org.eclipse.buildship.core.prefs
@@ -1,4 +1,14 @@
 GRADLE_BUILD_COMMANDS=org.eclipse.jdt.core.javabuilder
 GRADLE_FILTERS=1.0-projectRelativePath-matches-false-false-libraries,1.0-projectRelativePath-matches-false-false-server,1.0-projectRelativePath-matches-false-false-build,1.0-projectRelativePath-matches-false-false-.gradle,1.0-projectRelativePath-matches-false-false-libraries/servicesClient,1.0-projectRelativePath-matches-false-false-libraries/tmlScript,1.0-projectRelativePath-matches-false-false-libraries/wga,1.0-projectRelativePath-matches-false-false-libraries/wgaBuildTools,1.0-projectRelativePath-matches-false-false-libraries/wgapi,1.0-projectRelativePath-matches-false-false-libraries/wgapiJdbc,1.0-projectRelativePath-matches-false-false-libraries/wgutils,1.0-projectRelativePath-matches-false-false-distros/wgaDeb
 GRADLE_NATURES=org.eclipse.jdt.core.javanature
+build.commands=org.eclipse.jdt.core.javabuilder
+connection.arguments=
+connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
+connection.gradle.user.home=null
+connection.java.home=null
+connection.jvm.arguments=
+connection.project.dir=
+derived.resources=.gradle,build
 eclipse.preferences.version=1
+natures=org.eclipse.jdt.core.javanature
+project.path=\:
