--- a/OpenWGA/distros/wgaDeb/build.gradle
+++ b/OpenWGA/distros/wgaDeb/build.gradle
@@ -5,6 +5,8 @@ plugins {
   id 'nebula.ospackage' version '3.4.0'
 }
 
+def linuxDistros = ['lenny', 'hardy', 'lucid', 'squeeze', 'precise', 'trusty', 'wheezy', 'xenial']
+
 configurations {
     server
     tomcatAdditionalJars
