--- a/OpenWGA/distros/wgaDeb/build.gradle
+++ b/OpenWGA/distros/wgaDeb/build.gradle
@@ -98,16 +98,28 @@ buildDeb {
 build.dependsOn buildDeb
 buildDeb.dependsOn configurations.server
 
-task updateDebBetaRepositories(dependsOn: buildDeb) << {
+task updateDebRepository(dependsOn: buildDeb) << {
     def buildProps = new Properties()
     buildProps.load(file(build_properties_file).newInputStream())
+    
+    
+    def localRepo;
+    if (build_quality == 'beta') {
+        localRepo = buildProps['deploy.apt.ce.beta-repository.local']
+    }
+    else if (build_quality == 'early') {
+        localRepo = buildProps['deploy.apt.ce.early-repository.local']
+    }
+    else if (build_quality == 'final') {
+        localRepo = buildProps['deploy.apt.ce.repository.local']
+    }
 
     def debFile = buildDeb.archivePath
     println "Publishing debian package: ${debFile}"
     for (distro in linuxDistros) {
-        ant.exec(command:"/usr/bin/reprepro -C non-free -Vb ${buildProps['deploy.apt.ce.beta-repository.local']} includedeb ${distro} ${debFile}")
+        ant.exec(command:"/usr/bin/reprepro -C non-free -Vb ${localRepo} includedeb ${distro} ${debFile}")
     }
 }
-updateDebBetaRepositories.onlyIf{
-    project.hasProperty('build_properties_file')
+updateDebRepository.onlyIf{
+    project.hasProperty('build_properties_file') && project.hasProperty('build_quality') 
 }
