--- a/OpenWGA/server/src/main/webapp/WEB-INF/web.xml
+++ b/OpenWGA/server/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-                         "http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-<web-app metadata-complete="true">
+<web-app metadata-complete="true" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee  
+     http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+     version="2.5">
 	<display-name>WGAPublisher</display-name>
 	<distributable />
 	<filter>
@@ -90,10 +91,12 @@
 		<error-code>500</error-code>
 		<location>/error.jsp</location>
 	</error-page>
-	<taglib>
-		<taglib-uri>http://www.innovationgate.de/wgpublisher/webtml/2.2</taglib-uri>
-		<taglib-location>/WEB-INF/tlds/webtml.tld</taglib-location>
-	</taglib>
+	<jsp-config>
+		<taglib>
+			<taglib-uri>http://www.innovationgate.de/wgpublisher/webtml/2.2</taglib-uri>
+			<taglib-location>/WEB-INF/tlds/webtml.tld</taglib-location>
+		</taglib>
+	</jsp-config>
 	<login-config>
 		<auth-method>FORM</auth-method>
 		<realm-name>WGA2</realm-name>
