--- a/OpenWGA/server/testRuntime/build.gradle
+++ b/OpenWGA/server/testRuntime/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'java'
 
+compileJava.options.encoding = 'ISO-8859-1'
+
 sourceSets {
     testlib {
         output.resourcesDir = 'plugins/unittests/java'
