--- a/OpenWGA/libraries/wgutils/build.gradle
+++ b/OpenWGA/libraries/wgutils/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     compile 'commons-jxpath:commons-jxpath:1.3'
     compile 'commons-logging:commons-logging:1.2'
     compile 'commons-transaction:commons-transaction:1.1'
+    compile 'commons-lang:commons-lang:2.1'
     compile 'org.apache.commons:commons-vfs2:2.0'
     compile 'dom4j:dom4j:1.6.1'
     compile 'com.github.relaxng:relaxngDatatype:2011.1'
@@ -22,9 +23,8 @@ dependencies {
     compile 'org.imgscalr:imgscalr-lib:4.2'
     compile 'com.googlecode.java-ipv6:java-ipv6:0.16'
     compile 'jaxen:jaxen:1.1.6'
-    compile 'org.kohsuke.stapler:json-lib:2.4-jenkins-3'
     compile 'log4j:log4j:1.2.17'
-    compile 'org.slf4j:slf4j-log4j12:1.7.20'
+    compile 'net.sf.json-lib:json-lib:2.4:jdk15'
     compile fileTree(dir: '../../customLibs/dominoCorba', include: ['*.jar'])
     compile 'quartz:quartz:1.4.5'
     compile fileTree(dir: '../../customLibs/simpleXml', include: ['*.jar'])
