updated gradle cm build

--- a/OpenWGA/plugins/cm/.settings/org.eclipse.buildship.core.prefs
+++ b/OpenWGA/plugins/cm/.settings/org.eclipse.buildship.core.prefs
@@ -8,4 +8,4 @@ connection.project.dir=../..
 derived.resources=.gradle,build
 eclipse.preferences.version=1
 natures=org.eclipse.jdt.core.javanature
-project.path=\:plugins-cm
+project.path=\:plugin-cm
