--- a/OpenWGA/plugins/cm/build.gradle
+++ b/OpenWGA/plugins/cm/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'java'
 
 dependencies {
     compile project(":wga");
+    compile project(":wgapi");
     compileClasspath 'javax.servlet:javax.servlet-api:3.0.1'
     compileClasspath 'javax.servlet.jsp:jsp-api:2.2'
 }
