--- a/OpenWGA/plugins/additional-script-langs/build.gradle
+++ b/OpenWGA/plugins/additional-script-langs/build.gradle
@@ -1,6 +1,7 @@
 
 dependencies {
     
+    compile project(":wga");
     compileClasspath project(":wgaBuildTools");
     
     compileClasspath 'ro.isdc.wro4j:wro4j-core:1.7.8'
@@ -14,8 +15,8 @@ sourceSets {
 	main {
 		java {
 			srcDir 'src'  
+			output.classesDir = 'design/java'		
 		}
-		output.classesDir = 'design/java'		
 	}
 } 
 
