updated gradle.build for plugins

--- a/OpenWGA/plugins/additional-script-langs/.settings/de.innovationgate.eclipse.plugins.WGAEclipseEditors.prefs
+++ b/OpenWGA/plugins/additional-script-langs/.settings/de.innovationgate.eclipse.plugins.WGAEclipseEditors.prefs
@@ -1,2 +1,3 @@
+//PLUGIN_EXPORT_SOURCECODE_FOLDERNAME//Users/ws/workspace-openwga-dev.git/OpenWGAServer/OpenWGA/plugins/additional-script-langs/design=src
 //PLUGIN_EXPORT_SOURCECODE_FOLDERNAME//home/oliver/EclipseWorkspaces/WGA_HEAD.git/additional_script_langs/additional_script_langs/design=src
 eclipse.preferences.version=1
