--- a/OpenWGA/plugins/additional-script-langs/build.gradle
+++ b/OpenWGA/plugins/additional-script-langs/build.gradle
@@ -34,16 +34,13 @@ task updatePluginVersion << {
 
 }
 
-task buildPluginJars(type: Copy, dependsOn: build) {
-    from (tasks.jar.archivePath)
-   	into 'design/files/system'
-   	rename {'plugin-classes.jar'}
-}
-
-task buildPlugin(type: Zip, dependsOn: [buildPluginJars, updatePluginVersion]){
+task buildPlugin(type: Zip, dependsOn: [build, updatePluginVersion]){
     archiveName = "de.innovationgate.additional-script-langs-${project.version}.wgaplugin"    
     from('design') {
         into '/'
         exclude 'java'
     }
+    from (tasks.jar.archivePath){
+   		into 'files/system'
+   	}
 }
