--- a/OpenWGA/plugins/cm/build.gradle
+++ b/OpenWGA/plugins/cm/build.gradle
@@ -32,16 +32,13 @@ task updatePluginVersion << {
 
 }
 
-task buildPluginJars(type: Copy, dependsOn: build) {
-    from (tasks.jar.archivePath)
-   	into 'design/files/system'
-   	rename {'plugin-classes.jar'}
-}
-
-task buildPlugin(type: Zip, dependsOn: [buildPluginJars, updatePluginVersion]){
-    archiveName = "de.innovationgate.contentmanager-${project.version}.wgaplugin"    
+task buildPlugin(type: Zip, dependsOn: [build, updatePluginVersion]){
+    archiveName = "de.innovationgate.contentmanager-${project.version}.wgaplugin"
     from('design') {
         into '/'
         exclude 'java'
     }
+    from (tasks.jar.archivePath){
+   		into 'files/system'
+   	}
 }
