#00004695: Module form: add field type "file"

--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -140,7 +140,7 @@ form.settings.database=Datenbank
 form.settings.defaultvalue=Vorgabewert
 form.settings.email=Mail Adressen
 form.settings.field-type=Feld-Typ
-form.settings.field-type.options=Text|text,Zahl|number,Textarea|textarea,Password|password,Datum|date,Listbox|select,Radio|radio,Checkbox|checkbox,Versteckt|hidden
+form.settings.field-type.options=Text|text,Zahl|number,Textarea|textarea,Password|password,Datum|date,Listbox|select,Radio|radio,Checkbox|checkbox,Versteckt|hidden,Dateiupload|file
 form.settings.fieldname=Feldname
 form.settings.label=Label
 form.settings.layout=Layout
