--- a/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
@@ -136,7 +136,7 @@ form.settings.database=Database
 form.settings.defaultvalue=Default Value
 form.settings.email=Mail Addresses
 form.settings.field-type=Field type
-form.settings.field-type.options=Text|text,Number|number,Textarea|textarea,Password|password,Date|date,Listbox|select,Radio|radio,Checkbox|checkbox,Hidden|hidden
+form.settings.field-type.options=Text|text,Number|number,Textarea|textarea,Password|password,Date|date,Listbox|select,Radio|radio,Checkbox|checkbox,Hidden|hidden,Fileupload|file
 form.settings.fieldname=Field Name
 form.settings.label=Label
 form.settings.layout=Layout
