#00004696: Module "overlay": added settings "lazy load"

--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -378,3 +378,5 @@ vote.one-vote=eine Bewertung
 vote.reset=zur\u00FCcksetzen
 vote.votes=Bewertungen
 vote.your-vote=Ihre Bewertung dieser Seite
+
+modal.load-content=Lade Module erst wenn Popup sichtbar wird
