--- a/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
@@ -375,3 +375,6 @@ vote.one-vote=one review
 vote.reset=Reset
 vote.votes=Reviews
 vote.your-vote=Your rating for this page
+
+modal.load-content=Lazy load modules when popup gets visible 
+
