#00004737: Content module "form filed" type date: add year range

--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -380,3 +380,4 @@ vote.votes=Bewertungen
 vote.your-vote=Ihre Bewertung dieser Seite
 
 modal.load-content=Lade Module erst wenn Popup sichtbar wird
+form.settings.date.year-range=Jahresbereich
