--- a/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
@@ -378,3 +378,4 @@ vote.your-vote=Your rating for this page
 
 modal.load-content=Lazy load modules when popup gets visible 
 
+form.settings.date.year-range=Year range
