about dialog uses brand title now

--- a/OpenWGA/plugins/cm/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_de/general.properties
@@ -933,3 +933,5 @@ versions.other-languages=weitere Sprachen
 versions.title=Versionen
 
 dialog.settings.hide_archived_only-options=Verstecke archivierte Seiten|true
+
+about=Über {1} Content Manager
