--- a/OpenWGA/plugins/cm/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_en/general.properties
@@ -928,3 +928,5 @@ versions.other-languages=Other languages
 versions.title=Versions
 
 dialog.settings.hide_archived_only-options=hide archived pages|true
+
+about=About {1} Content Manager
